# riscv-baseband

./: .gitignore  .gitmodules  Makefile  Makefile.bootloader.mk  Makefile.torture.mk  Makefile.turnstile.mk  Makefile.xbb.mk  README.md  diamond_sources.tcl  diamond_sources_for_eth.tcl  ideas.md  permutator.md  vector-memory.md
assets/: isa-space.md  isa.wd.js  vreg-format.wd.js
c/: README.md
c/inc/: README.md  apb_bus.h  atan.c  atan.h  auto_barrelshift.c  auto_barrelshift.h  blinklib.c  blinklib.h  bootload_function.h  bootloader.c  bootloader.h  calculate_power.c  calculate_power.h  check_bootload.c  check_bootload.h  circular_buffer.h  circular_buffer_pow2.c  circular_buffer_pow2.h  circular_shift.c  circular_shift.h  coarse_sync.c  coarse_sync.h  compile_assert.h  config_word_add_eq_00.h  config_word_add_eq_00.h.bak  config_word_add_eq_01.h  config_word_add_rx4_00.h  config_word_add_rx4_01.h  config_word_add_rx4_02.h  config_word_add_rx4_03.h  config_word_add_rx_01.h  config_word_cmul_eq_00.h  config_word_cmul_eq_01.h  config_word_cmul_eq_08.h  config_word_cmul_eq_0f.h  config_word_cmul_eq_10.h  config_word_cmul_rx4_00.h  config_word_cmul_rx4_01.h  config_word_cmul_rx4_02.h  config_word_cmul_rx4_03.h  (+205 more)
c/inc/riscv_boost/: README.md
c/inc/riscv_boost/preprocessor/slot/: counter.hpp
c/inc/riscv_boost/preprocessor/slot/detail/: counter.hpp
hdl/dp_ram/: generic_dpram.v
hdl/top/: memory_top.sv  riscv_qengine_top.sv
hdl/vectorslice/: elastic_dpram.sv  vector_alu.sv
permutator/: .gitignore  Makefile  README.md  package.json  permutator16.xls
permutator/templates/: permutator.v  permutator_slice.v  tb.cpp  top-wave.tcl
scala/: Briey.scala  ControlStatusCsrPlugin.scala  CsrPlugin.scala  DEngineCsrPlugin.scala  DemapperCsrPlugin.scala  DmaCsrPlugin.scala  GenFullNoMmuNoCacheXbaseband.scala  GenericOutCsrPlugin.scala  GpioCsrPlugin.scala  InterruptCsrPlugin.scala  MapperMoverCsrPlugin.scala  Murax.scala  MuraxUtiles.scala  NCOCsrPlugin.scala  README.md  RingBusCsrPlugin.scala  SatDetectCsrPlugin.scala  Services.scala  TimerCsrPlugin.scala  Xbaseband.scala  XbbRiscv.scala  XbbRiscvUtiles.scala  XbbVectorCordic.scala
scripts/: asm2mif.py  hex2mif.py  hex2mif_vmem.py
scripts/make_include/: strip_public.mk
test/: README.md  simple-loop.S
verilator/: gtkwave.tcl  riscv_regs_dma.tcl  tb_bootloader.cpp  tb_capture_xbb.cpp  tb_riscv_dma.cpp  tb_torture.cpp  tb_turnstile.cpp
verilator/inc/: README.md  cpp_utils.hpp  read_hexfile.cpp  read_hexfile.hpp  verilator_pass_fail.h
verilator/vector_slice/: .gitignore  Makefile  Makefile_obj  Vex.cpp  Vex.hpp  display_vector_slice.tcl  tb_vector_slice.cpp
verilator/vector_slice/model/: CMakeLists.txt
verilator/vector_slice/model/src/main/: test_slice.cpp  test_slice_container.cpp
verilator/vector_slice/model/src/models/: slice.cpp  slice.hpp  slice_constants.hpp  slice_container.cpp  slice_container.hpp
